composer/modules/js-tests/src/test/resources/failing/tests/ballerina-test/src/test/resources/test-src/services/signature/with-res-param.bal
import ballerina.net.http;

@http:configuration {basePath:"/signature"}
service<http> echo {
    resource echo1 (http:Connection conn, http:InResponse res ) {
        http:OutResponse resp = {};
    }
}
